# carouselmaker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  REVIEW.md  alembic.ini  deploy.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 4a287fb8b0c7_add_subtitle_text_position_slide_type.py  7a1dff803cc2_add_payments_table.py  a239ce4260fd_add_content_template_and_template_data_.py  e42cd11a2865_initial_schema.py
assets/templates/: corporate.json  forest_green.json  gradient_sunset.json  minimalist.json  nano_banana.json  neon_nights.json  ocean_breeze.json  royal_purple.json  tech.json  warm_sand.json
docker/: Dockerfile  Dockerfile.worker  docker-compose.yml
docs/plans/: 2026-02-28-bot-profile-design.md  2026-02-28-bot-profile-implementation.md  2026-02-28-new-content-templates-design.md  2026-02-28-new-content-templates-plan.md
scripts/: generate_avatar.py
src/: main.py
src/ai/: anthropic_provider.py  base.py  gemini_provider.py  prompts.py  template_loader.py
src/api/: app.py  dependencies.py
src/bot/: factory.py
src/config/: constants.py  settings.py
src/db/: repository.py  session.py
src/models/: __init__.py  base.py  carousel.py  credit.py  payment.py  slide.py  style_preset.py  user.py
src/payments/: base.py  yookassa_provider.py
src/renderer/: browser.py  engine.py  html_builder.py  layout.py  styles.py
src/schemas/: carousel.py  credit.py  slide.py  style.py  user.py
src/services/: carousel_service.py  credit_service.py  style_service.py  user_service.py
src/storage/: s3.py
src/worker/: celery_app.py
tests/: conftest.py
tests/test_ai/: test_gemini_provider.py  test_parse_slide.py  test_template_loader.py
tests/test_renderer/: test_engine.py  test_html_builder.py
tests/test_services/: test_carousel_service.py
(+29 files in other folders)
